apps/production/part-db/deployment-patch.yaml
# apps/production/part-db/deployment-yaml.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app partdb
  labels:
    app.kubernetes.io/name: *app
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      containers:
        - name: *app
          envs:
            - name: BANNER
              value: "CrazyElectron Workbench Parts Database"
